fix: Switch to use G1 garbage collector (#41)
#### Motivation

ModelMesh previously used the Concurrent Mark Sweep (CMS) garbage collector, chosen based on tuning done some time ago. The CMS collector was removed in Java 14 so can't be used now that we have moved to Java 17.

#### Modification

- Revert container start script to start modelmesh with the G1 garbage collector
- Ensure hostname command is available in container (used by start script in non-Kubernetes case)

We may later switch to a different collector such as Shenandoah, depending on results of performance comparisons.

#### Result

ModelMesh container image works again

Signed-off-by: Nick Hill <nickhill@us.ibm.com>